--- a/01-intro/Homework.ipynb
+++ b/01-intro/Homework.ipynb
@@ -299,8 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b867db34-3b8c-4c17-a50d-3652d883c709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58130434-1f87-474e-807a-25651cc14549",
    "metadata": {},
    "outputs": [],
    "source": []
